fix: api projects
